--- a/restaurante/templates/menu.html
+++ b/restaurante/templates/menu.html
@@ -7,12 +7,14 @@
     <link rel="stylesheet" href="../templates/css/style.css" type="text/css" media="screen">
     <link rel="stylesheet" href="../templates/css/layout.css" type="text/css" media="screen"> 
     <script src="../templates/js/jquery-1.7.1.min.js" type="text/javascript"></script>
+    <script src="../templates/js/jquery-ui.custom.min.js" type="text/javascript"></script>
     <script src="../templates/js/cufon-yui.js" type="text/javascript"></script>
     <script src="../templates/js/cufon-replace.js" type="text/javascript"></script> 
     <script src="../templates/js/Dynalight_400.font.js" type="text/javascript"></script>
     <script src="../templates/js/FF-cash.js" type="text/javascript"></script>  
     <script src="../templates/js/jquery.equalheights.js" type="text/javascript"></script>    
-    <script src="../templates/js/jquery.bxSlider.js" type="text/javascript"></script> 
+    <script src="../templates/js/jquery.bxSlider.js" type="text/javascript"></script>
+    <script src="../templates/js/granchino.js" type="text/javascript"></script>
     <script type="text/javascript">
 		$(document).ready(function() {
 			$('#slider').bxSlider({
